Fix footer spacing: prevent social handle text wrapping with white-space: nowrap

--- a/generate-plugin/src/main/resources/theme/default/_sass/minima/_base.scss
+++ b/generate-plugin/src/main/resources/theme/default/_sass/minima/_base.scss
@@ -221,6 +221,9 @@ pre {
   li + li {
     padding-top: 5px;
   }
+  li {
+    white-space: nowrap;
+  }
 }
 
 
